--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -53,7 +53,6 @@
     <string name="delete_account_summary">Delete account. All layers connected with this account will be deleted too.</string>
     <string name="select">Select</string>
     <string name="select_ngw_layer">Select NextGIS Web Layer</string>
-    <string name="connections">Connections</string>
     <string name="ngw_account">NextGIS Web account</string>
     <string name="loading">Loading...</string>
     <string name="loading_summary">Wait a little. The data is loading</string>
@@ -61,4 +60,10 @@
     <string name="up">Up</string>
     <string name="error_connect_failed">Connect failed</string>
     <string name="resource_group">Resource group</string>
+    <string name="accounts">Accounts</string>
+    <string name="raster">Raster</string>
+    <string name="vector">Vector</string>
+    <string name="raster_layer">Raster layer</string>
+    <string name="vector_layer">Vector layer</string>
+    <string name="pg_layer">PostGIS layer</string>
 </resources>
