--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
-
 <!--
   ~ Project:  NextGIS Mobile
   ~ Purpose:  Mobile GIS for Android.
@@ -55,7 +54,7 @@
     <string name="select">Select</string>
     <string name="select_ngw_layer">Select NextGIS Web Layer</string>
     <string name="ngw_account">NextGIS Web account</string>
-    <string name="loading">Loading...</string>
+    <string name="loading">Loading…</string>
     <string name="loading_summary">Wait a little. The data is loading</string>
     <string name="up_dots">..</string>
     <string name="up">Up</string>
@@ -69,4 +68,11 @@
     <string name="pg_layer">PostGIS layer</string>
     <string name="credentials_opt">Credentials (optional)</string>
     <string name="layer_type_optional">Tile layer type (optional)</string>
+    <string name="sync">Synchronization</string>
+    <string name="auto_sync">Automatic synchronization</string>
+    <string name="auto_sync_summary">Synchronization at regular intervals</string>
+    <string name="sync_interval">Synchronization interval</string>
+    <string name="actions">Actions</string>
+    <string name="sync_layers">Layers</string>
+    <string name="sync_layers_summary">Check layers to synchronize with server</string>
 </resources>
