--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -54,7 +54,7 @@
     <string name="select">Select</string>
     <string name="select_ngw_layer">Select NextGIS Web Layer</string>
     <string name="ngw_account">NextGIS Web account</string>
-    <string name="loading">Loading…</string>
+    <string name="message_loading">Loading…</string>
     <string name="loading_summary">Wait a little. The data is loading</string>
     <string name="up_dots">..</string>
     <string name="up">Up</string>
@@ -94,4 +94,8 @@
     <string name="apply">Apply</string>
     <string name="error_db_insert">Insert feature failed</string>
     <string name="error_db_update">Update feature failed</string>
+    <string name="create_vector_layer">Create vector layer</string>
+    <string name="new_layer">New layer</string>
+    <string name="message_opening">Openning...</string>
+    <string name="error_layer_create">Create layer failed</string>
 </resources>
