--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -81,7 +81,7 @@
     <string name="layer_tms">Tile Raster</string>
     <string name="layer_na">Not available</string>
     <string name="latitude_caption">Latitude</string>
-    <string name="longitude_caption">Longtitude</string>
+    <string name="longitude_caption">Longitude</string>
     <string name="altitude_caption">Altitude</string>
     <string name="unit_meter">m</string>
     <string name="accuracy_caption">Accuracy</string>
@@ -96,6 +96,7 @@
     <string name="error_db_update">Update feature failed</string>
     <string name="create_vector_layer">Create vector layer</string>
     <string name="new_layer">New layer</string>
-    <string name="message_opening">Openning...</string>
+    <string name="message_opening">Openning…</string>
     <string name="error_layer_create">Create layer failed</string>
+    <string name="message_layer_created">Layer created</string>
 </resources>
