--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -107,4 +107,5 @@
     <string name="one_hour">1 hour</string>
     <string name="two_hours">2 hours</string>
     <string name="sync_set_interval">Set synchronization interval</string>
+    <string name="last_sync_time">Last sync time</string>
 </resources>
