Fix creating custom forms

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -109,4 +109,6 @@
     <string name="sync_set_interval">Set synchronization interval</string>
     <string name="last_sync_time">Last sync time</string>
     <string name="warning_different_credentials">Existing account differs the one from form. The existing account will be used</string>
+    <string name="error_no_location">The coordinates not defined</string>
+    <string name="error_layer_not_inited">Layer is not initialized. Abort</string>
 </resources>
