--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -119,4 +119,8 @@
     <string name="menu_delete">Delete</string>
     <string name="menu_select_all">Select all</string>
     <string name="nothing_selected">Nothing is selected</string>
+    <string name="folder">Folder</string>
+    <string name="zip">ZIP file</string>
+    <string name="formbuilder">FormBuilder file</string>
+    <string name="geojson">GeoJSON file</string>
 </resources>
