--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -151,4 +151,7 @@
     <string name="add_multipolygon">Добавить мультиполигон</string>
     <string name="delete_multipolygon">Удалить мультиполигон</string>
     <string name="save">Save</string>
+    <string name="error_create_feature">Create feature failed</string>
+    <string name="no">No</string>
+    <string name="yes">Yes</string>
 </resources>
