--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -126,6 +126,10 @@
     <string name="empty_tracks">There are no recorded tracks yet.</string>
     <string name="menu_delete">Delete</string>
     <string name="menu_select_all">Select all</string>
+    <string name="menu_share">Share</string>
+    <string name="menu_visibility_on">Show</string>
+    <string name="menu_visibility_off">Hide</string>
+    <string name="cab_selected">" selected"</string>
     <string name="nothing_selected">Nothing is selected</string>
     <string name="unclosed_track_deleted">Current track is deleted too</string>
     <string name="folder">Folder</string>
