--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -162,4 +162,5 @@
     <string name="attributes_next">Next</string>
     <string name="attributes_prev">Previous</string>
     <string name="geometry_by_walk_no_points">No enough points to create geometry</string>
+    <string name="error_change_feature">Change feature failed</string>
 </resources>
