--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -158,4 +158,5 @@
     <string name="attributes_prev">Предыдущий</string>
     <string name="geometry_by_walk_no_points">Недостаточно точек для создания геометрии</string>
     <string name="error_change_feature">Change feature failed</string>
+    <string name="move_point_to_center">Точка в центр экрана</string>
 </resources>
