--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -113,7 +113,7 @@
     <string name="fifteen_minutes">15 минут</string>
     <string name="thirty_minutes">30 минут</string>
     <string name="one_hour">1 час</string>
-    <string name="two_hours">2 час</string>
+    <string name="two_hours">2 часа</string>
     <string name="sync_set_interval">Установить интервал синхронизации</string>
     <string name="last_sync_time">Последняя синхронизация</string>
     <string name="warning_different_credentials">Существующая учетная запись отличается от введенных параметров. Бует использоваться существующая учетная запись.</string>
